# gcal-batch-sync

./: .cookiecutter.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  install-requirements.txt  pyproject.toml  setup-requirements.txt  setup.cfg
.github/workflows/: check.yaml  pypi.yaml
src/gcal_batch_sync/: cli.py  client_secrets.json  gcal.py
src/gcal_sync/: auth.py  cli.py  gcal.py
tests/: fixme.md  test_gcal.py
tests/readme/: config-sample.md  help.md  make-help.md
