[metadata]
name = gcal-sync
url = https://github.com/liskin/gcal-sync

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description="TODO",
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7

[options.packages.find]
where=src

[options.package_data]
* =
	py.typed
