[metadata]
name = gcal_sync
url = https://github.com/liskin/gcal-sync

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "TODO"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    google-api-python-client ~= 1.12
    icalendar
    pytz
tests_require =

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pep517
    python-language-server
    twine
test =
    pytest

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    gcal-sync = gcal_sync.cli:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
